--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,14 @@
 html {
     font-family: 'Roboto Condensed', sans-serif;
+    color: white;
 }
 
 body {
-    background: url("https://download.unsplash.com/photo-1429051883746-afd9d56fbdaf");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    background-color: #a3fffc;
+    background-color: indigo;
 }
 
 section {
-    background-color: rgba(0, 0, 0, 0.66);
+    background-color: rgba(37, 37, 37, 1);
     width: 1000px;
     margin-left:  auto;
     margin-right: auto;
@@ -27,7 +25,11 @@ ul {
 }
 
 code {
-    background-color:  dodgerblue;
+    padding: 3px;
+    color: #ff00d4;
+    background-color: #3a3a3a;
+    border: 1px solid #f9f3ff;
+    border-radius: 5px;
 }
 
 h1    {
@@ -53,4 +55,16 @@ a:visited {
 
 a:hover {
     color:  red;
+}
+
+.swimmingIcon {
+    max-width: 30px;
+}
+
+.formulier {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 193, 243, 0.52);
+    padding:10px;
 }
